Tue Jan 30 12:03:14 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Compression/Compressor_Factory.{h,cpp}:
          Fixed layout and warnings in single threaded build

Tue Jan 30 11:14:14 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/PortableServer/Direct_Collocation_Upcall_Wrapper.cpp:
          Fixed argument not used warning

        * tao/AnyTypeCode/Any_Unknown_IDL_Type.cpp:
        * tao/AnyTypeCode/Fixed_TypeCode.cpp:
        * tao/AnyTypeCode/Fixed_TypeCode.h:
        * tao/AnyTypeCode/Marshal.h:
        * tao/AnyTypeCode/Objref_TypeCode.cpp:
        * tao/AnyTypeCode/Objref_TypeCode_Static.cpp:
        * tao/AnyTypeCode/Value_TypeCode_Static.cpp:
        * tao/IORInterceptor/IORInterceptor_Adapter_Factory_Impl.cpp:
        * tao/ORB.cpp:
          Layout changes

Tue Jan 30 10:52:14 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/COIOP/COIOP_Simple_Test.cpp:
          New simplified COIOP test

        * tests/COIOP/COIOP_Test.cpp:
          Added advanced_resource.h include to force static
          link

        * tests/COIOP/COIOP_Tests.mpc:
          Add custom project for the IDL files and added the
          new simple test

        * tests/COIOP/Server_Task.cpp:
          Initialise pointer with 0

        * tests/COIOP/run_test.pl:
        * tests/Collocation_Tests/run_test.pl:
          Fixed bug in these two perl script, last test case was not
          unique

Tue Jan 30 09:33:14 2007  Martin Corino  <mcorino@remedy.nl>

        * tao/DynamicAny/DynUnion_i.cpp:

          Fixed broken DynUnion support (see Bug #2785).

Tue Jan 30 01:16:13 2007  James H. Hill     <hillj@isis.vanderbilt.edu>

        * tao/Utils/Servant_Var.inl:

          Fixed syntax error in catch (...) statements that was
          prevent TAO from building in some cases.

Mon Jan 29 19:27:14 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/orbsvcs/Notify/ProxySupplier_T.cpp: